// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 71,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 146,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 59,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 292,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 190,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 19,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14,
  "healMult": 1.1725,
  "hp": 640,
  "intStat": 148,
  "magicAtk": 39,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 28,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 32,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 27,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 118,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 30,
  "evasionPct": 2.7,
  "extraAttackChancePct": 10,
  "healMult": 1.7175000000000002,
  "hp": 835,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 20,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 51,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 18,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7,
  "healMult": 1.2575,
  "hp": 720,
  "intStat": 15,
  "magicAtk": 31,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "fd3e76a014650fac03692128b8ef96892edfc35e",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "eada6f10c60c98b12e84b5c386b8d5b49a587783",
    "outcome": "win",
    "playerHp": 716,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "a2e156f2cf770d675a6bc40c265093908b151d91",
    "outcome": "win",
    "playerHp": 576,
    "playerMp": 227,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "6b38147222bbb9c558895ffdb372ef06749d503b",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 11,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "3225d5c163ffb8b78ad497093227305dd1904b8c",
    "outcome": "win",
    "playerHp": 409,
    "playerMp": 501,
    "turns": 51,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "4503e77086156fb4b6d13891b95ec5dbc1f5fb49",
    "outcome": "win",
    "playerHp": 281,
    "playerMp": 227,
    "turns": 539,
  },
  {
    "enemyHp": 220,
    "label": "heal_vs_들소_boss",
    "logSha": "9a9f357a5e9756aa3995cb82d225cecf93685ee7",
    "outcome": "lose",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 251,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "1acf09c6fb60a7917271a136482b53bd113a3900",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 387,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "3c0d0f88835583def74a193b0223363ed04f3b42",
    "outcome": "p1_win",
    "turns": 65,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "19b8f088004bf613129e72b34ef54ca19d652e1e",
    "outcome": "p1_win",
    "turns": 35,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "75d2310acc9e8b29843f5e6044c143e7e6630626",
    "outcome": "p2_win",
    "turns": 191,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "aa58d007f4fd0901513e45a8d2c41b337478f811",
    "outcome": "win",
    "playerHp": 676,
    "playerMp": 227,
    "turns": 17,
  },
  {
    "enemyHp": 101,
    "label": "chill_enemy",
    "logSha": "acd23bfddaf15919db3e7da9ee63e37881651494",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 70,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "165309655bbf38a8b2e0bba0263ab1fb8414c417",
    "outcome": "win",
    "playerHp": 795,
    "playerMp": 227,
    "turns": 134,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "184778a90c7c0b24922824b57ef381eff93c6829",
    "outcome": "win",
    "playerHp": 565,
    "playerMp": 227,
    "turns": 37,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "327f1c444dca69a8ebc4d909560fc2cf10c6c252",
    "outcome": "win",
    "playerHp": 669,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "663e5c5577af259d9b014340ee616cae939bca42",
    "outcome": "win",
    "playerHp": 674,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 17,
    "label": "heavyblow_enemy",
    "logSha": "db9f66eea2a7acc6c5e87a9eff3512b347c0c689",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 590,
  },
]
`;
